<resources>
    <string name="app_name">RSS Anime Reader</string>
    <string name="sites_and_feeds">сайты и ленты</string>
    <string name="app_version">0.1b</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_favorite">favorite_channels</string>
    <string name="action_search">search_channel</string>
    <string name="action_settings">settings_application</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="channelImage">channelImage</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    >
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>

    <string name="notifications_new_message">notifications_new_message</string>
    <string name="title_new_notification_sound">New message notification</string>

    <string name="title_night_theme">night_theme</string>
    <string name="key_night_theme">key_night_theme</string>

    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="theme_settings">theme settings</string>
    <string name="title_choose_theme">выбор темы</string>


    <string name="title_font">Шрифт</string>
    <string name="title_size_font_in_list">Размер шрифта в списке</string>
    <string name="dialog_title_size_font_in_list">Размер шрифта</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">Данное приложение создано в рамках учебной практики ЦФТ</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="night_mode">Night mode</string>


</resources>
