<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_choose_theme">
        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_night_theme"
                android:title="@string/title_night_theme" />
        <EditTextPreference
                android:defaultValue="@string/default_gallery_storage"
                android:key="@string/key_gallery_name"
                android:summary="@string/default_gallery_storage"
                android:title="@string/title_gallery_storage" />

        <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/key_upload_over_wifi"
                android:summary="@string/summary_upload_over_wifi"
                android:title="@string/title_auto_upload" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_font">

        <ListPreference
                android:defaultValue="3"
                android:dialogTitle="@string/dialog_title_size_font_in_list"
                android:entries="@array/pref_upload_quality_entries"
                android:entryValues="@array/pref_upload_quality_values"
                android:key="@string/key_upload_quality"
                android:title="@string/title_size_font_in_list" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">




        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/key_vibrate"
                android:summary="@string/summary_vibrate"
                android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
                android:selectable="false"
                android:summary="@string/summary_about" />

        <Preference
                android:summary="@string/app_version"
                android:title="@string/title_version" />

        <Preference
                android:key="@string/key_send_feedback"
                android:summary="@string/summary_support"
                android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
                android:summary="@string/summary_faq"
                android:title="@string/title_faq">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_faq" />
        </Preference>


    </PreferenceCategory>
</PreferenceScreen>