<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
                  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
            app:fragment="com.example.rssanimereader.SettingsPrefActivity$ThemeSettingsFragment"
            android:icon="@drawable/ic_home_black_24dp"
            app:title="@string/theme_settings" />
    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
                android:selectable="false"
                android:summary="@string/summary_about" />

        <Preference
                android:summary="@string/app_version"
                android:title="@string/title_version" />

        <Preference
                android:key="@string/key_send_feedback"
                android:summary="@string/summary_support"
                android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
                android:summary="@string/summary_faq"
                android:title="@string/title_faq">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>