<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/app_bar_channels"
            android:icon="@drawable/baseline_channels_menu_white"
            android:title="@string/action_favorite"/>
    <item
            android:id="@+id/app_bar_fav"
            android:icon="@drawable/baseline_favorite_white"
            android:title="@string/action_favorite"/>

    <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/baseline_search_white"
            android:title="@string/action_search"/>
    <item
            android:id="@+id/app_bar_settings"
            android:icon="@drawable/baseline_settings_white"
            android:title="@string/action_settings"/>
</menu>